--- a/public/css/site.css
+++ b/public/css/site.css
@@ -373,7 +373,7 @@ body {
     display: block; }
   .main-title {
     font-size: 2em;
-    font-weight: 700;
+    font-weight: 800;
     margin-bottom: 32px;
     color: #fff; }
   @media screen and (min-width: 700px) {
@@ -397,20 +397,18 @@ body {
   .panel-button {
     font-family: inherit;
     display: inline-block;
-    width: 46%;
-    height: 46%;
     background-color: #383838;
     border-radius: 8px;
     border: none;
     color: #ffffffbb;
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 0.75em;
     letter-spacing: 1px;
-    padding: 16px; }
-    .panel-button:not(:last-child) {
-      margin-right: 6%; }
+    padding: 12px 16px;
+    margin: 0 6% 5% 0; }
     .panel-button.true {
-      border: 1px solid #ffae00; }
+      background-color: #000;
+      color: #ffae00; }
       .panel-button.true .panel-icon {
         fill: #ffae00; }
     .panel-button.false:hover {
@@ -438,14 +436,8 @@ body {
       padding: 0 32px 0 0;
       margin-bottom: 0; }
       .panel-button {
-        width: 9em;
-        height: 9em;
-        padding: 0; }
-        .panel-button span {
-          display: block; }
-        .panel-button:not(:last-child) {
-          margin-right: 20px;
-          margin-bottom: 14px; }
+        margin-right: 14px;
+        margin-bottom: 14px; }
       .panel-icon {
         width: 1.75em;
         margin-bottom: 6px;
@@ -458,8 +450,8 @@ body {
   .group-title {
     color: #fff;
     font-size: 1.2em;
-    font-weight: 500;
-    margin-bottom: 16px; }
+    font-weight: 700;
+    margin-bottom: 24px; }
   @media screen and (min-width: 700px) {
     .group {
       margin-bottom: 32px; } }
@@ -482,20 +474,27 @@ body {
       .friend-name {
         margin-right: 20px; } }
 
-.cloth {
+.item {
   display: inline-block;
   vertical-align: top;
-  margin: 0 2.5em 2em 0;
-  transition: all 0.07s ease-in-out; }
-  .cloth-tile {
-    width: 7em;
-    height: 3em;
-    border-radius: 6px;
-    margin-bottom: 6px; }
-  .cloth-form {
+  margin: 0 1.7em 1.7em 0;
+  transition: all 0.07s ease-in-out;
+  position: relative; }
+  .item-tile {
+    width: 10em;
+    height: 6em;
+    border-radius: 6px; }
+  .item-form {
     margin-bottom: 1.6px;
     display: block; }
-  .cloth-name {
-    font-size: 0.8em; }
-  .cloth:hover {
+  .item-name {
+    font-size: 0.8em;
+    position: absolute;
+    bottom: 4.8px;
+    left: 4.8px;
+    z-index: 2;
+    padding: 3.2px 4px;
+    border-radius: 4.8px;
+    background-color: rgba(31, 31, 31, 0.75); }
+  .item:hover {
     transform: scale(1.05); }
