--- a/public/css/site.css
+++ b/public/css/site.css
@@ -274,6 +274,9 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
+::-webkit-scrollbar {
+  display: none; }
+
 /**
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
@@ -373,7 +376,7 @@ body {
     display: block; }
   .main-title {
     font-size: 2em;
-    font-weight: 800;
+    font-weight: 700;
     margin-bottom: 32px;
     color: #fff; }
   @media screen and (min-width: 700px) {
@@ -398,14 +401,14 @@ body {
     font-family: inherit;
     display: inline-block;
     background-color: #383838;
-    border-radius: 8px;
+    border-radius: 6px;
     border: none;
     color: #ffffffbb;
     text-transform: uppercase;
-    font-size: 0.75em;
+    font-size: 0.72em;
     letter-spacing: 1px;
-    padding: 12px 16px;
-    margin: 0 6% 5% 0; }
+    padding: 9.6px 13.2px;
+    margin: 0 5% 4% 0; }
     .panel-button.true {
       background-color: #000;
       color: #ffae00; }
@@ -436,8 +439,8 @@ body {
       padding: 0 32px 0 0;
       margin-bottom: 0; }
       .panel-button {
-        margin-right: 14px;
-        margin-bottom: 14px; }
+        margin-right: 12px;
+        margin-bottom: 12px; }
       .panel-icon {
         width: 1.75em;
         margin-bottom: 6px;
@@ -455,6 +458,12 @@ body {
   @media screen and (min-width: 700px) {
     .group {
       margin-bottom: 32px; } }
+  .group.off {
+    background-color: #000;
+    padding: 2em 2em 0;
+    border-radius: 16px; }
+    .group.off .group-title {
+      color: #ffffff66; }
 
 .friend {
   display: inline-block;
@@ -481,8 +490,8 @@ body {
   transition: all 0.07s ease-in-out;
   position: relative; }
   .item-tile {
-    width: 10em;
-    height: 6em;
+    width: 8.5em;
+    height: 5em;
     border-radius: 6px; }
   .item-form {
     margin-bottom: 1.6px;
