--- a/public/scss/_normalize.scss
+++ b/public/scss/_normalize.scss
@@ -305,6 +305,10 @@ input::-moz-focus-inner {
     padding: 0;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 /**
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
