--- a/public/scss/_colors.scss
+++ b/public/scss/_colors.scss
@@ -3,7 +3,7 @@ $light-white: #ffffffbb;
 $lighter-white: #ffffff66;
 $lightest-white: #ffffff33;
 $white: #fff;
-$gray: #383838;
+$grey: #383838;
 $yellow: #ffae00;
 $blue: #0088ff;
 $black: #000;
