--- a/public/css/site.css
+++ b/public/css/site.css
@@ -415,14 +415,14 @@ body {
     font-family: inherit;
     display: inline-block;
     background-color: #383838;
-    border-radius: 6px;
+    border-radius: 4px;
     border: none;
     color: #ffffffbb;
     text-transform: uppercase;
     font-size: 0.72em;
     letter-spacing: 1px;
     padding: 6.4px 10.4px;
-    margin: 0 5% 4% 0; }
+    margin: 2% 2.75% 0 0; }
     .panel-button.true {
       background-color: #000;
       color: #ffae00; }
@@ -448,11 +448,11 @@ body {
   .panel-box {
     background-color: #000;
     margin-bottom: 22px;
-    border-radius: 16px;
-    padding: 14.4px 24px 10px; }
+    border-radius: 10px;
+    padding: 20px 24px 22px; }
+    .panel-box-group:not(:last-child) {
+      margin-bottom: 16px; }
     .panel-box-title {
-      margin-top: 2%;
-      margin-bottom: 4%;
       font-size: 0.75em; }
   .panel-clear {
     font-size: 0.7em; }
@@ -464,17 +464,14 @@ body {
       padding: 0 3.5% 0 0;
       margin-bottom: 0; }
       .panel-button {
-        margin-right: 12px;
-        margin-bottom: 12px; }
+        margin-right: 10px;
+        margin-top: 10px; }
       .panel-icon {
         width: 1.75em;
         margin-bottom: 6px;
         margin-right: 0; }
       .panel-notif {
-        width: 90%; }
-      .panel-box-title {
-        margin-top: 6px;
-        margin-bottom: 10px; } }
+        width: 90%; } }
 
 .group {
   margin-bottom: 24px; }
