--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -66,14 +66,14 @@ body{
 		font-family: inherit;
 		display: inline-block;
 		background-color: $grey;
-		border-radius: 0.75*$std-padding;
+		border-radius: 0.5*$std-padding;
 		border: none;
 		color: $light-white;
 		text-transform: uppercase;
 		font-size: 0.72em;
 		letter-spacing: 1px;
 		padding: 0.8*$std-padding 1.3*$std-padding;
-		margin: 0 5% 4% 0;
+		margin: 2% 2.75% 0 0;
 		&.true{
 			background-color: $black;
 			color: $yellow;
@@ -107,11 +107,12 @@ body{
 	&-box{
 		background-color: $black;
 		margin-bottom: 2.75*$std-padding;
-		border-radius: 2*$std-padding;
-		padding: 1.8*$std-padding 3*$std-padding 1.25*$std-padding;
+		border-radius: 1.25*$std-padding;
+		padding: 2.5*$std-padding 3*$std-padding 2.75*$std-padding;
+		&-group:not(:last-child){
+			margin-bottom: 2*$std-padding;
+		}
 		&-title{
-			margin-top: 2%;
-			margin-bottom: 4%;
 			font-size: 0.75em;
 		}
 	}
@@ -126,8 +127,8 @@ body{
 		padding: 0 3.5% 0 0;
 		margin-bottom: 0;
 		&-button{
-			margin-right: 1.5*$std-padding;
-			margin-bottom: 1.5*$std-padding;
+			margin-right: 1.25*$std-padding;
+			margin-top: 1.25*$std-padding;
 		}
 		&-icon{
 			width: 1.75em;
@@ -136,12 +137,6 @@ body{
 		}
 		&-notif{
 			width: 90%;
-		}
-		&-box{
-			&-title{
-				margin-top: 0.75*$std-padding;
-				margin-bottom: 1.25*$std-padding;
-			}
 		}
 	}
 }
