--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -94,21 +94,29 @@ body{
 		vertical-align: bottom;
 	}
 	&-notif{
-		margin-bottom: 4*$std-padding;
-		padding: 2*$std-padding 2.5*$std-padding;
+		background-color:$black;
+		border: 1px solid $lighter-white;
+		margin-bottom: 4.5*$std-padding;
 		border-radius: $std-padding;
-		background-color:$blue;
-		line-height: 1.35em;
+		display: flex;
+		align-items: center;
 		b{
-			font-weight: 800;
 			color: $white;
+		}
+		&-icon{
+			margin: 0 0.25*$std-padding 0 $std-padding;
+		}
+		&-text{
+			font-size: 0.9em;
+			line-height: 1.3em;
+			padding: 2*$std-padding 2.5*$std-padding 2*$std-padding 0;
 		}
 	}
 	&-box{
 		background-color: $black;
 		margin-bottom: 2.75*$std-padding;
 		border-radius: 1.25*$std-padding;
-		padding: 2.5*$std-padding 3*$std-padding 2.75*$std-padding;
+		padding: 2.5*$std-padding 2.75*$std-padding 2.75*$std-padding;
 		&-group:not(:last-child){
 			margin-bottom: 2*$std-padding;
 		}
@@ -135,9 +143,6 @@ body{
 			margin-bottom: 0.75*$std-padding;
 			margin-right: 0;
 		}
-		&-notif{
-			width: 90%;
-		}
 	}
 }
 
@@ -147,11 +152,9 @@ body{
 		color: $white;
 		font-size: 1.2em;
 		font-weight: 700;
-		margin-bottom: 3*$std-padding;
+		margin-bottom: 1.2em;
 	}
-	@media screen and (min-width: 700px) {
-		margin-bottom: 4*$std-padding;
-	}
+
 	&.off{
 		background-color: $black;
 		padding: 2em 2em 0;
@@ -188,7 +191,7 @@ body{
 .item{
 	display: inline-block;
 	vertical-align: top;
-	margin: 0 1.7em 1.7em 0;
+	margin: 0 1.5em 1.5em 0;
 	transition: all 0.07s ease-in-out;
 	position: relative;
 	&-tile{
