--- a/public/css/site.css
+++ b/public/css/site.css
@@ -434,16 +434,10 @@ body {
     .panel-button.true {
       background-color: #000;
       color: #ffae00; }
-      .panel-button.true .panel-icon {
-        fill: #ffae00; }
     .panel-button.false:hover {
       background-color: #ffffff66; }
     .panel-button span {
       vertical-align: middle; }
-  .panel-icon {
-    width: 1.5em;
-    margin-right: 6px;
-    vertical-align: bottom; }
   .panel-notif {
     background-color: #000;
     border: 1px solid #ffffff66;
@@ -499,24 +493,6 @@ body {
     .group.off .group-title {
       color: #ffffff66; }
 
-.friend {
-  display: inline-block;
-  padding: 8px 10px;
-  border-radius: 6px;
-  margin: 0 12px 12px 0;
-  cursor: default; }
-  .friend:hover {
-    background-color: #ffffff33; }
-  .friend-name {
-    margin-right: 14px; }
-  .friend-proxy {
-    color: #ffffff66; }
-  @media screen and (min-width: 700px) {
-    .friend {
-      padding: 8px 12px; }
-      .friend-name {
-        margin-right: 20px; } }
-
 .item {
   display: inline-block;
   vertical-align: top;
@@ -541,3 +517,12 @@ body {
     background-color: rgba(31, 31, 31, 0.75); }
   .item:hover {
     transform: scale(1.05); }
+
+.empty {
+  text-align: center;
+  padding: 15vh 0; }
+  .empty-icon {
+    fill: #383838; }
+  .empty-text {
+    line-height: 1.6em;
+    color: #ffffff66; }
