--- a/public/css/site.css
+++ b/public/css/site.css
@@ -364,6 +364,69 @@ textarea {
   border: none;
   color: #ffffffbb; }
 
+.pop-item-title span, .item-name {
+  font-size: 0.8em;
+  position: absolute;
+  padding: 3.2px 4.8px;
+  border-radius: 4.8px; }
+
+.empty {
+  text-align: center;
+  padding: 15vh 0; }
+  .empty-icon {
+    fill: #383838; }
+  .empty-text {
+    line-height: 1.6em;
+    color: #ffffff66; }
+
+.pop-box {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.97);
+  overflow: hidden;
+  bottom: 32px;
+  right: 32px;
+  z-index: 2;
+  border-radius: 12px;
+  padding: 1em;
+  overflow: hidden;
+  box-shadow: 2px 4px 18px 0 rgba(0, 0, 0, 0.6);
+  cursor: default;
+  transform: scale(1, 1);
+  transform-origin: 100% 100%;
+  transition: all 0.08s ease-in-out; }
+  .pop-box.inactive {
+    transform: scale(0, 0); }
+
+.pop-item {
+  display: flex; }
+  .pop-item-tile {
+    border-radius: 8px;
+    width: 7em;
+    border: 1px solid #1f1f1f; }
+  .pop-item-detail {
+    margin-left: 16px;
+    padding: 1px 2px 0 0; }
+    .pop-item-detail h6 {
+      margin-bottom: 4px; }
+  .pop-item-desc {
+    margin-bottom: 16px; }
+  .pop-item-title {
+    margin-bottom: 12px; }
+    .pop-item-title span {
+      position: static;
+      background-color: #383838; }
+  .pop-item-table td:first-child {
+    font-weight: 100;
+    color: rgba(56, 56, 56, 0.8);
+    padding-right: 16px;
+    padding-bottom: 6px;
+    font-size: 0.95em; }
+  .pop-item-table td:not(:first-child) {
+    padding-bottom: 6px;
+    color: #000; }
+  .pop-item-table tr:last-child td {
+    padding-bottom: 0; }
+
 body {
   font-family: 'Circular Std', 'SF Pro Display';
   background-color: #1f1f1f;
@@ -381,7 +444,8 @@ body {
 
 .main {
   width: 100%;
-  padding: 32px; }
+  padding: 32px;
+  box-sizing: inherit; }
   .main-content {
     display: block; }
   .main-head {
@@ -444,11 +508,10 @@ body {
     margin-bottom: 36px;
     border-radius: 8px;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    padding-left: 8px; }
     .panel-notif b {
       color: #fff; }
-    .panel-notif-icon {
-      margin-left: 8px; }
     .panel-notif-text {
       font-size: 0.9em;
       line-height: 1.3em;
@@ -498,7 +561,8 @@ body {
   vertical-align: top;
   margin: 0 1.5em 1.5em 0;
   transition: all 0.07s ease-in-out;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
   .item-tile {
     width: 8.5em;
     height: 5em;
@@ -507,22 +571,9 @@ body {
     margin-bottom: 1.6px;
     display: block; }
   .item-name {
-    font-size: 0.8em;
-    position: absolute;
     bottom: 4.8px;
     left: 4.8px;
-    z-index: 2;
-    padding: 3.2px 4px;
-    border-radius: 4.8px;
+    z-index: 1;
     background-color: rgba(31, 31, 31, 0.75); }
   .item:hover {
     transform: scale(1.05); }
-
-.empty {
-  text-align: center;
-  padding: 15vh 0; }
-  .empty-icon {
-    fill: #383838; }
-  .empty-text {
-    line-height: 1.6em;
-    color: #ffffff66; }
