--- a/public/scss/_elements.scss
+++ b/public/scss/_elements.scss
@@ -8,3 +8,10 @@
     border: none;
     color: $light-white;
 }
+
+%box-tag{
+    font-size: 0.8em;
+    position: absolute;
+    padding: $std-padding*0.4 $std-padding*0.6;
+    border-radius: 0.6*$std-padding;
+}
