--- a/public/scss/_colors.scss
+++ b/public/scss/_colors.scss
@@ -5,5 +5,6 @@ $lighter-white: #ffffff66;
 $lightest-white: #ffffff33;
 $white: #fff;
 $yellow: #ffae00;
+$cobalt:  #2190ff;
 $blue: #0061b5;
 $black: #000;
