--- a/public/css/site.css
+++ b/public/css/site.css
@@ -401,8 +401,7 @@ textarea {
   display: flex; }
   .pop-item-tile {
     border-radius: 8px;
-    width: 7em;
-    border: 1px solid #1f1f1f; }
+    width: 7em; }
   .pop-item-detail {
     margin-left: 16px;
     padding: 1px 2px 0 0; }
@@ -426,6 +425,45 @@ textarea {
     color: #000; }
   .pop-item-table tr:last-child td {
     padding-bottom: 0; }
+
+.home {
+  padding: 24vh 0;
+  height: 100%;
+  background-color: #000;
+  text-align: center; }
+  .home-header {
+    width: 60%;
+    margin: 0 auto; }
+  .home-title {
+    font-size: 5em;
+    font-weight: 800;
+    color: #fff;
+    letter-spacing: -3px; }
+  .home-name {
+    display: inline-block;
+    font-size: 1.2em;
+    letter-spacing: -5px;
+    margin-bottom: 24px;
+    padding: 24px 32px 12px 30px;
+    border-radius: 20px;
+    background-color: #383838; }
+  .home-highlight {
+    color: #2190ff; }
+  .home-cta {
+    display: inline-block;
+    background-color: #2190ff;
+    padding: 8px 15.2px;
+    letter-spacing: -0.5px;
+    color: #fff;
+    border: none;
+    text-decoration: none;
+    font-family: inherit;
+    border-radius: 6px;
+    font-weight: 600;
+    margin-top: 32px;
+    font-size: 1.3em; }
+    .home-cta:hover {
+      background-color: #007dfa; }
 
 body {
   font-family: 'Circular Std', 'SF Pro Display';
