--- a/public/scss/_components.scss
+++ b/public/scss/_components.scss
@@ -15,28 +15,29 @@
         position: fixed;
         background-color: rgba(white,0.97);
         overflow: hidden;
-        bottom: 4*$std-padding;
-        right: 4*$std-padding;
+        bottom: 0;
+        left: 0;
+        right: 0;
         z-index: 2;
-        border-radius: 1.5*$std-padding;
+        border-radius: 1.5*$std-padding 1.5*$std-padding 0 0;
         padding: 1em;
         overflow: hidden;
         box-shadow: 2px 4px 18px 0 rgba(0,0,0,0.6);
         cursor: default;
-        transform: scale(1,1);
-        transform-origin: 100% 100%;
         transition: all 0.08s ease-in-out;
+        transform: translate(0, 0);
         &.inactive{
-            transform: scale(0,0);
+            transform: translate(0,100%);
         }
     }
     &-item{
         display: flex;
         &-tile{
+            width: 25%;
             border-radius: $std-padding;
-            width: 7em;
         }
         &-detail{
+            width: 75%;
             margin-left: 2*$std-padding;
             padding: 1px 2px 0 0;
             h6{
@@ -73,33 +74,49 @@
             }
         }
     }
+    @media screen and (min-width: 700px) {
+        &-box{
+            border-radius: 1.5*$std-padding;
+            bottom: 4*$std-padding;
+            right: 4*$std-padding;
+            transform: scale(1,1);
+            transform-origin: 100% 100%;
+            &.inactive{
+                transform: scale(0,0);
+            }
+        }
+        &-item{
+            &-detail{
+                width: 7em;
+            }
+            &-detail{
+                width: auto;
+            }
+        }
+    }
 }
 
 
 .home{
-    padding: 24vh 0;
-    height: 100%;
+    padding-top: 16vh;
+    height: 100vh;
     background-color: $black;
     text-align: center;
+    box-sizing: inherit;
     &-header{
-        width: 60%;
+        width: 70%;
         margin: 0 auto;
-    }
-    &-title{
-        font-size: 5em;
+        font-size: 3.5em;
         font-weight: 800;
         color: $white;
-        letter-spacing: -3px;
+        letter-spacing: -4px;
     }
     &-name{
-        // border: 2px solid $cobalt;
         display: inline-block;
         font-size: 1.2em;
-        // color: $cobalt;
-        letter-spacing: -5px;
         margin-bottom: 3*$std-padding;
-        padding: 3*$std-padding 4*$std-padding 1.5*$std-padding 3.75*$std-padding;
-        border-radius: 2.5*$std-padding;
+        padding: 2*$std-padding 2.5*$std-padding 1.5*$std-padding;
+        border-radius: 2*$std-padding;
         background-color: $grey;
     }
     &-highlight{
@@ -117,9 +134,20 @@
         border-radius: 0.75*$std-padding;
         font-weight: 600;
         margin-top: 4*$std-padding;
-        font-size: 1.3em;
+        font-size: 1.25em;
         &:hover{
             background-color: darken($cobalt,7.5%);
+        }
+    }
+    @media screen and (min-width: 700px) {
+        padding-top: 20vh;
+        &-header{
+            width: 60%;
+            font-size: 5em;
+        }
+        &-name{
+            padding: 3*$std-padding 4*$std-padding 1.5*$std-padding;
+            border-radius: 2.5*$std-padding;
         }
     }
 }
