--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -18,6 +18,8 @@ body{
 	&-title{
 		text-transform: uppercase;
 		letter-spacing: 2px;
+		text-decoration: none;
+		color: inherit;
 	}
 	&-user{
 		float: right;
@@ -85,7 +87,7 @@ body{
 		font-size: 0.72em;
 		letter-spacing: 1px;
 		padding: 0.8*$std-padding 1.3*$std-padding;
-		margin: 2% 2.75% 0 0;
+		margin: 2.5% 2.5% 0 0;
 		&.true{
 			background-color: $black;
 			color: $yellow;
@@ -107,6 +109,9 @@ body{
 		padding-left: $std-padding;
 		b{
 			color: $white;
+		}
+		&-icon{
+			width: 50px;
 		}
 		&-text{
 			font-size: 0.9em;
@@ -154,7 +159,7 @@ body{
 		color: $white;
 		font-size: 1.2em;
 		font-weight: 700;
-		margin-bottom: 1.2em;
+		margin-bottom: 1em;
 	}
 
 	&.off{
@@ -170,14 +175,20 @@ body{
 .item{
 	display: inline-block;
 	vertical-align: top;
-	margin: 0 1.5em 1.5em 0;
 	transition: all 0.07s ease-in-out;
 	position: relative;
-	cursor: pointer;
+	cursor: pointer;	
+	border-radius: 0.65*$std-padding;
+	overflow: hidden;
+	width: 30%;
+	height: 3.8em;
+	margin: 0 5% 5% 0;
+	&:nth-child(3n){
+		margin-right: 0;
+	}
 	&-tile{
-		width: 8.5em;
-		height: 5em;
-		border-radius: 0.75*$std-padding;
+		width: 100%;
+		height: 100%;
 	}
 	&-form{
 		margin-bottom: 0.2*$std-padding;
@@ -192,5 +203,14 @@ body{
 	}
 	&:hover{
 		transform: scale(1.05);
+	}
+	@media screen and (min-width: 700px) {
+		width: 8.5em;
+		height: 5em;
+		margin: 0 1.5em 1.5em 0;
+		border-radius: 0.75*$std-padding;
+		&:nth-child(3n){
+			margin-right: initial;
+		}
 	}
 }
