--- a/public/css/site.css
+++ b/public/css/site.css
@@ -516,7 +516,7 @@ body {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin-bottom: 32px; }
+    margin-bottom: 8%; }
   .main-title {
     font-size: 2em;
     font-weight: 700;
@@ -529,21 +529,21 @@ body {
     .main {
       padding: 2.75% 0; }
       .main-head {
-        margin-bottom: 40px; }
+        margin-bottom: 4%; }
       .main-content {
-        vertical-align: top;
         display: inline-block;
-        width: 66%;
-        margin-right: 3.25%; } }
+        width: 67%;
+        vertical-align: top;
+        margin-right: 2.75%; } }
 
 .panel {
   display: block;
-  margin-bottom: 48px; }
+  margin-bottom: 12%; }
   .panel-head {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin-bottom: 20px; }
+    margin-bottom: 5.5%; }
   .panel-title {
     color: #fff;
     font-size: 1.2em;
@@ -570,7 +570,7 @@ body {
   .panel-notif {
     background-color: #000;
     border: 1px solid #ffffff66;
-    margin-bottom: 36px;
+    margin-bottom: 9.5%;
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -585,7 +585,7 @@ body {
       padding: 16px 20px 16px 0; }
   .panel-box {
     background-color: #000;
-    margin-bottom: 22px;
+    margin-bottom: 5%;
     border-radius: 10px;
     padding: 20px 22px 22px; }
     .panel-box-group:not(:last-child) {
@@ -599,7 +599,7 @@ body {
       display: inline-block;
       width: 24.75%;
       vertical-align: top;
-      margin: 0 3.25% 0 2.75%; }
+      margin: 0 2.75%; }
       .panel-button {
         margin-right: 10px;
         margin-top: 10px; }
@@ -609,23 +609,31 @@ body {
         margin-right: 0; } }
 
 .group {
-  margin-bottom: 24px; }
+  margin-bottom: 9%; }
   .group-title {
     color: #fff;
     font-size: 1.2em;
     font-weight: 700;
-    margin-bottom: 1em; }
+    margin-bottom: 4.5%; }
   .group.off {
     background-color: #000;
     padding: 2em 2em 0;
     border-radius: 16px; }
     .group.off .group-title {
       color: #ffffff66; }
+  @media screen and (min-width: 700px) {
+    .group {
+      margin-bottom: 4.5%; }
+      .group-title {
+        margin-bottom: 3.25%; } }
+  @media screen and (min-width: 1000px) {
+    .group-title {
+      margin-bottom: 2%; } }
 
 .item {
   display: inline-block;
   vertical-align: top;
-  transition: all 0.07s ease-in-out;
+  transition: transform 0.05s ease-in-out;
   position: relative;
   cursor: pointer;
   border-radius: 5.2px;
@@ -633,8 +641,6 @@ body {
   width: 30%;
   height: 3.8em;
   margin: 0 5% 5% 0; }
-  .item:nth-child(3n) {
-    margin-right: 0; }
   .item-tile {
     width: 100%;
     height: 100%; }
@@ -650,11 +656,22 @@ body {
     transform: scale(1.05); }
   @media screen and (min-width: 700px) {
     .item {
+      width: 30.66%;
+      height: 5.3em;
+      margin: 0 4% 3.5% 0;
+      border-radius: 4px; } }
+  @media screen and (max-width: 999px) {
+    .item:nth-child(3n) {
+      margin-right: 0; }
+    .item:nth-child(3n+1):nth-last-child(-n+3), .item:nth-child(3n+1):nth-last-child(-n+3) ~ * {
+      margin-bottom: 0; } }
+  @media screen and (min-width: 1000px) {
+    .item {
       width: 14.58%;
       height: 5.3em;
       margin: 0 2.5% 2.35% 0;
       border-radius: 6px; }
-      .item:nth-child(3n) {
-        margin-right: 2.5%; }
       .item:nth-child(6n) {
-        margin-right: 0; } }
+        margin-right: 0; }
+      .item:nth-child(6n+1):nth-last-child(-n+6), .item:nth-child(6n+1):nth-last-child(-n+6) ~ * {
+        margin-bottom: 0; } }
