WIP app with Footwear. All functional

--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -103,7 +103,7 @@ body{
 	&-notif{
 		background-color:$black;
 		border: 1px solid $lighter-white;
-		margin-bottom: 9.5%;
+		//margin-bottom: 9.5%;
 		border-radius: $std-padding;
 		display: flex;
 		align-items: center;
