--- a/public/css/site.css
+++ b/public/css/site.css
@@ -367,7 +367,7 @@ textarea {
 .pop-item-title span, .item-name {
   font-size: 0.8em;
   position: absolute;
-  padding: 3.2px 4.8px;
+  padding: 3.2px 5.2px;
   border-radius: 4.8px; }
 
 .empty {
@@ -379,6 +379,38 @@ textarea {
     line-height: 1.6em;
     color: #ffffff66; }
 
+.view-box {
+  margin-bottom: 8%; }
+
+.view-button {
+  display: inline-block;
+  text-decoration: none;
+  overflow: hidden;
+  text-align: center;
+  color: inherit;
+  font-weight: 500;
+  width: 48%;
+  background-color: #383838;
+  border-radius: 6px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.8em;
+  padding: 16px;
+  vertical-align: middle; }
+  .view-button:not(:last-child) {
+    margin-right: 4%; }
+  .view-button.true {
+    background-color: #000;
+    color: #2190ff; }
+    .view-button.true .view-icon {
+      fill: #2190ff; }
+  .view-button.false:hover {
+    background-color: #ffffff33; }
+
+.view-icon {
+  margin-right: 6px;
+  vertical-align: bottom; }
+
 .pop-box {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.97);
@@ -387,8 +419,8 @@ textarea {
   left: 0;
   right: 0;
   z-index: 2;
-  border-radius: 12px 12px 0 0;
-  padding: 1em;
+  border-radius: 10px 10px 0 0;
+  padding: 1em 1.5em 1em 1em;
   box-shadow: 2px 4px 18px 0 rgba(0, 0, 0, 0.6);
   cursor: default;
   transition: all 0.08s ease-in-out;
@@ -400,7 +432,8 @@ textarea {
   display: flex; }
   .pop-item-tile {
     width: 25%;
-    border-radius: 8px 8px 8px 32px; }
+    border-radius: 8px;
+    border-bottom-left-radius: 32px; }
   .pop-item-detail {
     width: 75%;
     margin-left: 16px;
@@ -428,7 +461,7 @@ textarea {
 
 @media screen and (min-width: 700px) {
   .pop-box {
-    border-radius: 12px;
+    border-radius: 8px;
     bottom: 32px;
     right: 32px;
     left: auto;
@@ -438,7 +471,7 @@ textarea {
       transform: scale(0, 0); }
   .pop-item-tile {
     width: 7em;
-    border-radius: 8px; }
+    border-radius: 6px; }
   .pop-item-detail {
     width: auto; } }
 
@@ -497,14 +530,29 @@ body {
 
 .header {
   background-color: #000;
-  padding: 16px 20px; }
+  padding: 14px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
   .header-title {
     text-transform: uppercase;
     letter-spacing: 2px;
     text-decoration: none;
     color: inherit; }
-  .header-user {
-    float: right; }
+  .header-notif {
+    display: none;
+    margin: 0 auto; }
+    .header-notif b {
+      color: #fff; }
+    .header-notif-icon {
+      width: 36px; }
+    .header-notif-text {
+      font-size: 0.9em; }
+  @media screen and (min-width: 700px) {
+    .header {
+      padding: 6px 20px; }
+      .header-notif {
+        display: block; } }
 
 .main {
   width: 100%;
@@ -543,7 +591,7 @@ body {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin-bottom: 5.25%; }
+    margin-bottom: 4.75%; }
   .panel-title {
     color: #fff;
     font-size: 1.2em;
@@ -562,29 +610,14 @@ body {
     margin: 2.5% 2.5% 0 0; }
     .panel-button.true {
       background-color: #000;
-      color: #ffae00; }
+      color: #2190ff; }
     .panel-button.false:hover {
       background-color: #ffffff66; }
     .panel-button span {
       vertical-align: middle; }
-  .panel-notif {
-    background-color: #000;
-    border: 1px solid #ffffff66;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    padding-left: 8px; }
-    .panel-notif b {
-      color: #fff; }
-    .panel-notif-icon {
-      width: 50px; }
-    .panel-notif-text {
-      font-size: 0.9em;
-      line-height: 1.3em;
-      padding: 16px 20px 16px 0; }
   .panel-box {
     background-color: #000;
-    margin-bottom: 5%;
+    margin-bottom: 4.25%;
     border-radius: 10px;
     padding: 20px 22px 22px; }
     .panel-box-group:not(:last-child) {
@@ -601,11 +634,7 @@ body {
       margin: 0 2.75%; }
       .panel-button {
         margin-right: 10px;
-        margin-top: 10px; }
-      .panel-icon {
-        width: 1.75em;
-        margin-bottom: 6px;
-        margin-right: 0; } }
+        margin-top: 10px; } }
 
 .group {
   margin-bottom: 9%; }
@@ -637,12 +666,23 @@ body {
   cursor: pointer;
   border-radius: 5.2px;
   overflow: hidden;
-  width: 30%;
-  height: 3.8em;
   margin: 0 5% 5% 0; }
+  .item.small {
+    width: 30%;
+    height: 3.8em; }
+  .item.big {
+    width: 47.5%;
+    height: 6.1em; }
   .item-tile {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .item-tile img {
+      max-width: 70%;
+      max-height: 75%; }
   .item-form {
     margin-bottom: 1.6px;
     display: block; }
@@ -655,22 +695,38 @@ body {
     transform: scale(1.05); }
   @media screen and (min-width: 700px) {
     .item {
-      width: 30.66%;
-      height: 5.3em;
       margin: 0 4% 3.5% 0;
-      border-radius: 4px; } }
+      border-radius: 4px; }
+      .item.small {
+        width: 30.66%;
+        height: 5.3em; }
+      .item.big {
+        width: 48%;
+        height: 8em; } }
   @media screen and (max-width: 999px) {
-    .item:nth-child(3n) {
+    .item.small:nth-child(3n) {
       margin-right: 0; }
-    .item:nth-child(3n+1):nth-last-child(-n+3), .item:nth-child(3n+1):nth-last-child(-n+3) ~ * {
+    .item.small:nth-child(3n+1):nth-last-child(-n+3), .item.small:nth-child(3n+1):nth-last-child(-n+3) ~ * {
+      margin-bottom: 0; }
+    .item.big:nth-child(2n) {
+      margin-right: 0; }
+    .item.big:nth-child(2n+1):nth-last-child(-n+2), .item.big:nth-child(2n+1):nth-last-child(-n+2) ~ * {
       margin-bottom: 0; } }
   @media screen and (min-width: 1000px) {
     .item {
-      width: 14.58%;
-      height: 5.3em;
       margin: 0 2.5% 2.35% 0;
       border-radius: 6px; }
-      .item:nth-child(6n) {
-        margin-right: 0; }
-      .item:nth-child(6n+1):nth-last-child(-n+6), .item:nth-child(6n+1):nth-last-child(-n+6) ~ * {
-        margin-bottom: 0; } }
+      .item.small {
+        width: 14.58%;
+        height: 5.3em; }
+        .item.small:nth-child(6n) {
+          margin-right: 0; }
+        .item.small:nth-child(6n+1):nth-last-child(-n+6), .item.small:nth-child(6n+1):nth-last-child(-n+6) ~ * {
+          margin-bottom: 0; }
+      .item.big {
+        width: 23.125%;
+        height: 8.4em; }
+        .item.big:nth-child(4n) {
+          margin-right: 0; }
+        .item.big:nth-child(4n+1):nth-last-child(-n+4), .item.big:nth-child(4n+1):nth-last-child(-n+4) ~ * {
+          margin-bottom: 0; } }
